Added Shadow Volumes (Still Has Issues)

--- a/Coursework/Project_Template.vcxproj.filters
+++ b/Coursework/Project_Template.vcxproj.filters
@@ -77,16 +77,31 @@
     <None Include="shader\object.vert">
       <Filter>shaders</Filter>
     </None>
-    <None Include="shader\shadow.frag">
-      <Filter>shaders</Filter>
-    </None>
-    <None Include="shader\shadow.vert">
-      <Filter>shaders</Filter>
-    </None>
     <None Include="shader\skybox.frag">
       <Filter>shaders</Filter>
     </None>
     <None Include="shader\skybox.vert">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shader\shadowvolume-render.vs">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shader\shadowvolume.frag">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shader\shadowvolume.gs">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shader\shadowvolume.vert">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shader\shadowvolume-comp.fs">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shader\shadowvolume-comp.vs">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shader\shadowvolume-render.fs">
       <Filter>shaders</Filter>
     </None>
   </ItemGroup>
