Gamification: Total of 11 corridor variants, completion screen with time taken, alarm bulb object.

--- a/Coursework/Project_Template.vcxproj
+++ b/Coursework/Project_Template.vcxproj
@@ -162,6 +162,8 @@
   <ItemGroup>
     <None Include="shader\basic_uniform.frag" />
     <None Include="shader\basic_uniform.vert" />
+    <None Include="shader\menu.frag" />
+    <None Include="shader\menu.vert" />
     <None Include="shader\particle.frag" />
     <None Include="shader\particle.vert" />
     <None Include="shader\skybox.frag" />
