--- a/Coursework/Project_Template.vcxproj.filters
+++ b/Coursework/Project_Template.vcxproj.filters
@@ -86,6 +86,12 @@
     <None Include="shader\particle.vert">
       <Filter>shaders</Filter>
     </None>
+    <None Include="shader\menu.frag">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shader\menu.vert">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="helper\scene.h">
